# showet

./: .gitignore  .travis.yml  BUGFIX.md  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Dockerfile  Dockerfile.showet  IMPROVEMENTS.md  Makefile  PlatformBase.py  Platform_Alambik_Alambik.py  Platform_Amstrad_Cpcplus.py  Platform_Android_Android.py  Platform_Apple_AppleI.py  Platform_Apple_AppleII.py  Platform_Apple_AppleIIGS.py  Platform_Arcade_Arcade.py  Platform_Archimedes_Acorn.py  Platform_Atari_2600.py  Platform_Atari_5200.py  Platform_Atari_7800.py  Platform_Atari_Jaguar.py  Platform_Atari_Lynx.py  Platform_Atari_ST.py  Platform_Atari_STETTFalcon.py  Platform_Atari_STe.py  Platform_Atari_xlxe.py  Platform_Bandai_Wonderswan.py  Platform_Commodore_128.py  Platform_Commodore_64.py  Platform_Commodore_Amiga.py  Platform_Commodore_Amiga_AGA.py  Platform_Commodore_CBMII.py  Platform_Commodore_Pet.py  Platform_Commodore_Plus4.py  Platform_Commodore_Vic20.py  Platform_Elektronika_Pdp11.py  Platform_Enterprise_Ep128.py  Platform_Fairchild_Channelf.py  (+451 more)
.github/workflows/: ci.yml
.history/: .qmake_20260130005637.stash  .qmake_20260130032417.stash  .travis_20260130032414.yml  Makefile_20260130005637  Makefile_20260130030627  Makefile_20260130030655  Makefile_20260130031219  Platform_Amstrad_Cpcplus_20260130005637.py  Platform_Amstrad_Cpcplus_20260130030732.py  Platform_Apple_AppleIIGS_20260130005637.py  Platform_Apple_AppleIIGS_20260130030810.py  Platform_Apple_AppleII_20260130005637.py  Platform_Apple_AppleII_20260130030808.py  Platform_Apple_AppleI_20260130031221.py  Platform_Arcade_Arcade_20260130005637.py  Platform_Arcade_Arcade_20260130031224.py  Platform_Archimedes_Acorn_20260130005637.py  Platform_Archimedes_Acorn_20260130030818.py  Platform_Atari_2600_20260130030821.py  Platform_Atari_5200_20260130005637.py  Platform_Atari_5200_20260130031227.py  Platform_Atari_7800_20260130005637.py  Platform_Atari_7800_20260130030829.py  Platform_Atari_Jaguar_20260130005637.py  Platform_Atari_Jaguar_20260130030826.py  Platform_Atari_Lynx_20260130031233.py  Platform_Atari_STETTFalcon_20260130031236.py  Platform_Atari_xlxe_20260130031236.py  Platform_Bandai_Wonderswan_20260130031310.py  Platform_Commodore_128_20260130031315.py  Platform_Commodore_64_20260130031319.py  Platform_Commodore_Amiga_20260130031320.py  Platform_Commodore_Amiga_20260130031322.py  Platform_Commodore_CBMII_20260130031322.py  Platform_Commodore_Pet_20260130031325.py  Platform_Commodore_Pet_20260130031327.py  Platform_Commodore_Plus4_20260130031327.py  Platform_Commodore_Vic20_20260130005637.py  Platform_Commodore_Vic20_20260130031330.py  Platform_Elektronika_Pdp11_20260130005637.py  (+146 more)
.history/Docs/: platform_3do_20260130030957.md  platform_Amstrad_20260130030925.md  (+5 more)
Docs/: modernization-progress.md  platform-compatibility.md  platform_3do.md  platform_Android.md  platform_Bandai.md  platform_Flash.md  platform_Wild.md  retropie-integration.md  streaming-guide.md
debian/: control  files  showet.substvars
demos/: BlackWhite2.m3u  Drifters-BlackWhite2A.adf
docs/: API.md  BROWSER_DEMO_STATUS.md  GUI-modernization.md  PLATFORM_INDEX.md  README.md  SHOWET_GUIDE.md  alambik-alambik.md  alambik_alambik.md  amstrad-cpcplus.md  amstrad_cpcplus.md  android-android.md  android_android.md  apple-applei.md  apple-appleii.md  apple-appleiigs.md  apple_applei.md  apple_appleii.md  apple_appleiigs.md  arcade-arcade.md  arcade_arcade.md  archimedes-acorn.md  archimedes_acorn.md  atari-2600.md  atari-5200.md  atari-7800.md  atari-jaguar.md  atari-lynx.md  atari-stettfalcon.md  atari-xlxe.md  atari_2600.md  atari_5200.md  atari_7800.md  atari_jaguar.md  atari_lynx.md  atari_stettfalcon.md  atari_xlxe.md  autostart-configs.md  bandai-wonderswan.md  bandai_wonderswan.md  commodore-128.md  (+149 more)
memory/: platform_audit.md  test_results.md
nostalgist_configs/: alambik_alambik.json  amstrad_cpcplus.json  android_android.json  apple_applei.json  apple_appleii.json  apple_appleiigs.json  arcade_arcade.json  archimedes_acorn.json  atari_2600.json  atari_5200.json  atari_7800.json  atari_jaguar.json  atari_lynx.json  atari_st.json  atari_ste.json  atari_stettfalcon.json  atari_xlxe.json  bandai_wonderswan.json  commodore_128.json  commodore_64.json  commodore_amiga.json  commodore_amiga_aga.json  commodore_amiga_multidisk.json  commodore_cbmii.json  commodore_pet.json  commodore_plus4.json  commodore_vic20.json  crt_presets.json  elektronika_pdp11.json  enterprise_ep128.json  fairchild_channelf.json  fancon_pico8.json  flash_ruffle.json  gamepark_2x.json  gamepark_32.json  gce_vectrex.json  java_java.json  linux_linux.json  magnavox_odyssey.json  manifest.json  (+55 more)
scripts/: auto_generate.py  batch_refactor.py  batocera-install.sh  fix_all_platforms.py  fix_platforms.py  generate_all_docs.py  generate_platform_docs.py  platform_template.py  refactor_platforms.py  regenerate_platforms.py  retropie-install.sh  scan_missing.py
shaders/: crt-easymode.glsl  crt-pi.glsl  crt-royale.glsl  neogeo_scanlines.glsl
showet/: __init__.py
showet-gui/: Makefile  ProdDelegate.qml  main.cpp  moc_predefs.h  moc_showethelper.cpp  qml_rc.py  qrc_qml.cpp  showet-gui  showet-gui.pro  showethelper.cpp  showethelper.h
showet-ui/: index.html  manifest.json
showet_ui/: steamdeck_theme.json
sound_design/: README.md  showet-sound-theme-manager.js
systems/: Platform_Amstrad_Cpcplus.py  Platform_Apple_AppleI.py  Platform_Apple_AppleII.py  Platform_Apple_AppleIIGS.py  Platform_Arcade_Arcade.py  Platform_Archimedes_Acorn.py  Platform_Atari_2600.py  Platform_Atari_5200.py  Platform_Atari_7800.py  Platform_Atari_Jaguar.py  Platform_Atari_Lynx.py  Platform_Atari_STETTFalcon.py  Platform_Atari_xlxe.py  Platform_Bandai_Wonderswan.py
tests/: __init__.py  conftest.py  test_android.py  test_audio_fingerprint.py  test_demo_browser.py  test_ml_papers.py  test_platform_base.py  test_retropie.py  test_setup_wizard.py  test_showet.py  test_showet_demoparty_mode.py  test_showet_executor.py  test_showet_jukebox.py  test_showet_thumbnails.py  test_showet_v4.py  test_streaming.py
(+44 files in other folders)
