[project]
name = "showet"
version = "0.1.0"
description = "Demo viewer using Pouet.net metadata."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
dependencies = [
    "inquirer>=3.4",
    "patool>=4.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
showet = "showet:main"
showet-api = "showet_api:main"
showet-webui = "showet_webui:launch_browser"
showet-parties = "showet_parties:main"
showet-stream = "showet_stream:main"

[project.urls]
Homepage = "https://github.com/itsdarklikehell/showet"
Repository = "https://github.com/itsdarklikehell/showet"
Documentation = "https://github.com/itsdarklikehell/showet#readme"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [
    ".history",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "nostalgist_configs/*",
    ".github/*",
    "scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]