[project]
name = "showet"
version = "4.0.0-dev"
description = "Demo viewer using Pouet.net metadata - The definitive demoscene demo-runner with jukebox, streaming, and nostalgic CRT presentation."

dependencies = [
    "inquirer>=3.4",
    "patool>=4.0",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
async = [
    "aiohttp>=3.9",
]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
showet = "showet:main"
showet-auto = "showet_auto:main"
showet-setup-wizard = "showet_setup_wizard:main"
showet-executor = "showet_executor:main"
showet-archive = "showet_archive_handler:main"
showet-installer = "showet_dependency_installer:main"
showet-api = "showet_api:main"
showet-webui = "showet_webui:launch_browser"
showet-parties = "showet_parties:main"
showet-stream = "showet_stream:main"
showet-steamdeck = "showet_steamdeck_controller:main"
showet-relay = "rtmp_relay:main"
save-stream-key = "save_stream_key:main"
showet-launcher = "launcher:main"
demo-viewer = "demo_viewer:main"
demo-recorder = "demo_recorder:main"
showet-status = "showet_status:main"
showet-spotlight = "demo_spotlight:main"
showet-notifier = "party_notifier:main"
showet-papers = "showet_ml_papers:main"
chat-overlay = "chat_overlay:main"
scene-org = "scene_org_integration:main"
showet-cache = "showet_cache_manager:main"
showet-ai = "showet_ai_curator:main"
showet-browser = "showet_demo_browser:main"
showet-modarchive = "modarchive_integration:main"
showet-demozoo = "demozoo_integration:main"
showet-modarchive-enhanced = "modarchive_enhanced:main"
showet-jukebox = "showet_jukebox:main"
showet-thumbnails = "showet_thumbnails:main"
showet-demoparty = "showet_demoparty_mode:main"
showet-tvs99 = "tvs99_setup:main"
showet-check = "showet_check:main"
showet-verify = "showet_verify:main"
showet-universal = "showet_executor:main"

[project.urls]
Homepage = "https://github.com/itsdarklikehell/showet"
Repository = "https://github.com/itsdarklikehell/showet"
Documentation = "https://github.com/itsdarklikehell/showet#readme"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [
    ".history",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "nostalgist_configs/*",
    ".github/*",
    "scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]